Actualización en dev

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: Terraform Deploy
+name: Terraform Deploy to AWS
 
 on:
   push:
@@ -10,26 +10,26 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repo
+      - name: Checkout código del repositorio
         uses: actions/checkout@v2
 
-      - name: Configure AWS credentials
+      - name: Configurar credenciales AWS desde GitHub Secrets
         uses: aws-actions/configure-aws-credentials@v2
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: us-east-1
 
-      - name: Setup Terraform
+      - name: Instalar Terraform
         uses: hashicorp/setup-terraform@v2
         with:
           terraform_version: 1.5.0
 
-      - name: Terraform Init
-        run: terraform init
+      - name: Inicializar Terraform
+        run: cd terraform && terraform init
 
-      - name: Terraform Plan
-        run: terraform plan
+      - name: Plan de Terraform
+        run: cd terraform && terraform plan
 
-      - name: Terraform Apply
-        run: terraform apply -auto-approve
+      - name: Aplicar cambios con Terraform
+        run: cd terraform && terraform apply -auto-approve
