--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,10 +26,10 @@ jobs:
           terraform_version: 1.5.0
 
       - name: Inicializar Terraform
-        run: cd terraform && terraform init
+        run: cd terraform/aws/ec2 && terraform init
 
       - name: Plan de Terraform
-        run: cd terraform && terraform plan
+        run: cd terraform/aws/ec2 && terraform plan
 
       - name: Aplicar cambios con Terraform
-        run: cd terraform && terraform apply -auto-approve
+        run: cd terraform/aws/ec2 && terraform apply -auto-approve
