Agregando file backend.tf

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,8 +27,8 @@ jobs:
       - name: Inicializar Terraform
         run: cd terraform/aws/ec2 && terraform init
 
-      - name: Ejecutar `terraform plan`
-        run: cd terraform/aws/ec2 && terraform plan
+      - name: Ejecutar terraform plan (sin bloqueo)
+        run: cd terraform/aws/ec2 && terraform plan -lock=false
 
   apply:
     needs: plan
@@ -52,5 +52,5 @@ jobs:
       - name: Inicializar Terraform
         run: cd terraform/aws/ec2 && terraform init
 
-      - name: Aplicar cambios con Terraform
-        run: cd terraform/aws/ec2 && terraform apply -auto-approve
+      - name: Aplicar cambios con Terraform (sin bloqueo)
+        run: cd terraform/aws/ec2 && terraform apply -auto-approve -lock=false
