update files and new files for configmap and eksnodescaler [skip ci]

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 # Ignorar claves privadas y archivos sensibles
 keys/
 *.pem
+*.swp 
 terraform.tfstate
 terraform.tfstate.backup
 .terraform/
+.vscode
