updated script files with -d option and pdf [skip ci]

--- a/aws/eks/02-ebs-csi-driver-tests/02-pvc.yaml
+++ b/aws/eks/02-ebs-csi-driver-tests/02-pvc.yaml
@@ -5,9 +5,8 @@ metadata:
 spec:
   accessModes:
     - ReadWriteOnce
-  storageClassName: ebs-sc
+  storageClassName: ebs-sc-gp3
   resources:
     requests:
       storage: 1Gi
 
-#kubectl apply -f pvc.yaml
