--- a/aws/eks/02-ebs-csi-driver-tests/01-storageclass.yaml
+++ b/aws/eks/02-ebs-csi-driver-tests/01-storageclass.yaml
@@ -1,10 +1,8 @@
 apiVersion: storage.k8s.io/v1
 kind: StorageClass
 metadata:
-  name: ebs-sc
+  name: ebs-sc-gp3
 provisioner: ebs.csi.aws.com
 volumeBindingMode: WaitForFirstConsumer
 parameters:
   type: gp3
-
-#kubectl apply -f storageclass.yaml
